# EECS568

./: .gitconfig
eecs568/java/: README
eecs568/java/jni/: Makefile  glcontext-x11.c  glcontext.c  gltest.c
eecs568/java/src/team/: GaussianFit.java  MultiGaussian.java
ps1/: answers.tex
ps2/: answers.tex  generate.sh
ps2/eecs568/config/: plot_sim.config  sim.config
ps2/eecs568/java/: .gitignore  README  build.xml  run_surface_plot.py
ps2/eecs568/java/jni/: .gitignore  april_vis_GL.h
ps2/figures/: chi2_iters.eps  error_plot.eps
ps3/: answers.tex
ps3/eecs568/: README
ps3/eecs568/config/: sim.config
ps3/eecs568/java/: build.xml
ps3/eecs568/java/jni/: Makefile  april_vis_GL.h  gl_jni.c
ps3/eecs568/lcmtypes/: pose_t.lcm
rgbd-slam/config/: proc.config
rgbd-slam/cpp/: CMakeLists.txt  FeatureDetector.hpp  OpenCVWrapper.cpp  OpenCVWrapper.h  main.cpp  stopwatch.hpp
rgbd-slam/demos/: gt_corridor.gt  gt_first.gt
rgbd-slam/docs/: OdometryDataSet.xlsx  mobile_robotics_proposal.tex  opencv_installation.txt  opencv_wrapper.txt  vision_progress_report.tex
rgbd-slam/docs/final_paper/: report.tex  sources.bib
rgbd-slam/docs/mobile_proposal/: mobile_robotics_proposal.tex
rgbd-slam/docs/vision_final_paper/: build.sh  report.tex  sources.bib
rgbd-slam/docs/vision_progress/: vision_progress_report.tex
rgbd-slam/java/: build.xml
rgbd-slam/jni/: Makefile  gl_jni.c
rgbd-slam/kinect/: Calib_Guide.txt  README  setup-rules.sh
rgbd-slam/kinect/java/: build.xml
rgbd-slam/scripts/: runRGBD.sh
rgbd-slam/test/: kf_board_a.kframe  kf_board_b.kframe
(+142 files in other folders)
